--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,30 @@
+* {
+    margin: 0;
+    padding: 0;
+}
 
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    background: #000;
+    color: #fff;
+}
+
+.hero {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100vh;
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 0 32px;
+}
+
+.hero p {
+    line-height: 1;
+}
+
+.hero h1 {
+    line-height: 1.4;
+    font-size: 40px;
+    margin-top: 16px;
+}
